# clarito

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY-duk.md  SIGNING.md  index.html  package.json  pnpm-lock.yaml
.claude/: launch.json
.design-ref/: README.md  chrome.jsx
.design-ref/chats/: chat1.md
.design-ref/project/: app.jsx  chrome.jsx  data.jsx  icons.jsx  index.html  palette.jsx  screen-companii.jsx  screen-dashboard.jsx  screen-factura-detaliu.jsx  screen-factura-noua.jsx  screen-facturi-primite.jsx
.github/: SECRETS.md
.github/workflows/: audit.yml  build.yml  ci.yml  msi-debug.yml  release-build.yml  release.yml  test-ci.yml
docs/: ANAF_INTEGRATION_TESTING.md  CODEX_AUDIT_PLAN.md  CSP_SECURITY_RATIONALE.md  RELEASE_SIGNING.md  SESSION_HANDOFF_2026-05-30.md  SESSION_R6_2026-05-30.md  duk-release-notes.md  v2-plan.md
docs/plans/: 2025-05-29-real-to-text-money-migration.md
scripts/: fetch-validators.sh  jlink-jre.sh  verify-duk.sh  verify-local.sh
scripts/branding/: _brand.py  make_dmg_background.py  make_icon.py  make_nsis_images.py
src/: App.tsx  main.tsx  router.tsx
src-tauri/: .gitignore  CASH_VAT_DESIGN.md  Cargo.toml  D205_EMITTER_DESIGN.md  build.rs  deny.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: dump_duk_samples.rs  seed_demo.rs
src-tauri/icons/: icon.icns
src-tauri/license-gen/: Cargo.toml
src-tauri/license-gen/src/: main.rs
src-tauri/migrations/: 0001_initial.sql  0002_payment_means.sql  0003_payments_recurring.sql  0004_payments_recurring_fk.sql  0008_storno_reference.sql  0009_remove_smartbill_token_from_settings.sql  0010_spv_dedup_index.sql  0011_dedup_notifications_and_contact_currency.sql  0012_received_vat_breakdown.sql  0013_products.sql  0014_vat_rates.sql  0015_receipts.sql  0016_chart_of_accounts.sql  0017_received_exchange_rate.sql  0018_gl_journal.sql  0019_stock_movements.sql  0020_fixed_assets.sql  0021_art331_code.sql  0022_intra_eu_kind.sql  0023_vat_rates_2026.sql  0024_contact_is_individual.sql  0025_cash_vat.sql  0026_cash_vat_window.sql  0027_received_invoice_payments.sql  0028_revenue_kind.sql  0029_payment_exchange_rate.sql  0030_vat_rates_legea_141_2025.sql  0031_tax_regime.sql  0032_close_accounts.sql  0033_employees.sql  0034_payroll_accounts.sql  0035_depreciation.sql  0036_stock_valuation.sql  0037_employee_d112_special.sql  0038_payroll_6458.sql  0039_employee_exemptie_cas_min.sql  0040_secondary_offices.sql  0041_medical_leaves.sql  0042_etransport_declarations.sql  0043_employee_suma_netaxabila.sql  (+57 more)
src-tauri/resources/: license.rtf
src-tauri/resources/duk/: .keep
src-tauri/resources/jre-min/: .keep
src-tauri/src/: constraint_guard.rs  error.rs  lib.rs  main.rs  process_util.rs  state.rs
src-tauri/src/anaf/: client.rs  errors.rs  keychain.rs  mod.rs  oauth.rs  pinning.rs
src-tauri/src/anaf_decl/: bilant_xml.rs  cash_vat.rs  d100.rs  d100_xml.rs  d101.rs  d101_xml.rs  d112.rs  d112_xml.rs  d205_xml.rs  d207_xml.rs  d301_xml.rs  d700_xml.rs  d710_xml.rs  etransport.rs  etva.rs  form_versions.rs  mod.rs  preflight.rs  validation.rs  version.rs  xml.rs
src-tauri/src/anaf_decl/d300/: generator.rs  mod.rs  rows.rs
src-tauri/src/anaf_decl/d390/: generator.rs  mod.rs
src-tauri/src/anaf_decl/d394/: generator.rs  mod.rs  sections.rs
src-tauri/src/anaf_decl/duk/: mod.rs
src-tauri/src/anaf_decl/saft/: generator.rs  masterfiles.rs  mod.rs  source_docs.rs
src-tauri/src/background/: mod.rs  poll.rs  recovery.rs  recurring.rs  spv.rs
src-tauri/src/commands/: accounts.rs  accruals.rs  advance_invoices.rs  anaf.rs  archive.rs  assets.rs  auth.rs  avize.rs  bnr.rs  capital_goods.rs  companies.rs  contacts.rs  contracts.rs  d100.rs  d101.rs  d301.rs  d390.rs  d394.rs  d700.rs  d710.rs  declarations.rs  deconturi.rs  dezmembrari.rs  dividends.rs  etransport.rs  feedback.rs  fiscal_receipts.rs  fx_revaluation.rs  gdpr.rs  gl.rs  import.rs  integrations.rs  inventory.rs  invoices.rs  journals.rs  license.rs  manual_journal.rs  mod.rs  nir.rs  notifications.rs  (+24 more)
src-tauri/src/commands/bank_import/: camt053.rs  commands.rs  csv_parser.rs  matching.rs  mod.rs  mt940.rs  parser.rs
src-tauri/src/commands/import_wave_c/: adapter.rs  commit.rs  mod.rs  resolve.rs  saga_dbf.rs  saga_xml.rs  smartbill_rest.rs  smartbill_xml.rs  winmentor.rs  xml_common.rs
src-tauri/src/db/: accounts.rs  accruals.rs  advance_invoices.rs  aging.rs  assets.rs  audit.rs  avize.rs  capital_goods.rs  certificates.rs  companies.rs  concedii.rs  contacts.rs  contracts.rs  declaration_filings.rs  deconturi.rs  dezmembrari.rs  dividends.rs  fiscal_receipts.rs  fx_revaluation.rs  gestiune.rs  gl.rs  inventory.rs  invoices.rs  license.rs  mod.rs  models.rs  nir.rs  notifications.rs  orders.rs  payment_instruments.rs  payments.rs  payroll.rs  payroll_config.rs  payroll_diurna.rs  payroll_retineri.rs  payroll_sporuri.rs  period_locks.rs  pontaj.rs  pool.rs  productie.rs  (+15 more)
src-tauri/src/notifications/: mod.rs
src-tauri/src/ubl/: fonts.rs  fx.rs  generator.rs  mod.rs  paths.rs  pdf.rs  rocius_rules.rs  validator.rs
src-tauri/tests/: d100_xsd.rs  d101_drec_probe.rs  d101_xsd.rs  d207_xsd.rs  d300_xsd.rs  d301_xsd.rs  d394_xsd.rs  d710_xsd.rs  db_smoke.rs  duk_p6_dump.rs  duk_runtime.rs  duk_validation.rs  etransport_xsd.rs  saft_xsd.rs
src-tauri/wix/: en-US.wxl
src/data/: sample.ts
src/hooks/: use-animated-close.ts  use-icon-press.ts  use-modal-focus.ts  use-one-shot.ts  use-open-pdf.ts  use-open-xml.ts  use-theme.ts
src/lib/: auth-store.ts  constants.test.ts  constants.ts  demo.ts  efacturaDeadline.ts  error-mapper.test.ts  error-mapper.ts  formatters.test.ts  formatters.ts  i18n.ts  pdf-viewer-store.ts  platform.ts  queries.ts  shortcuts.ts  store.ts  tauri.ts  toasts.ts  utils.ts  xml-format.test.ts  xml-format.ts  xml-highlight.test.ts  xml-highlight.ts  xml-to-tables.test.ts  xml-to-tables.ts  xml-viewer-store.ts
src/locales/: en.json  ro.json
src/pages/: Account.tsx  Accruals.tsx  Assets.tsx  Avize.tsx  Bank.tsx  BankImport.tsx  CapitalGoods.tsx  (+44 more)
(+208 files in other folders)
